--- a/wwwroot/_scss/main.scss
+++ b/wwwroot/_scss/main.scss
@@ -236,3 +236,17 @@
 a[href="tel:*"] {
   cursor: pointer;
 }
+
+body {
+  padding-right: 0px !important
+}
+
+.modal-open {
+  overflow-y: auto;
+}
+
+@media (max-width: $width-xs) {
+  #logo a {
+    float: right;
+  }
+}
